--- a/MyClassJournal/Views/Modals/AddPupil.cshtml
+++ b/MyClassJournal/Views/Modals/AddPupil.cshtml
@@ -11,25 +11,25 @@
             <div class="form-group">
                 <label class="control-label col-sm-3" for="pupilName">Имя</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="pupilName" ng-model="currentPupil.name"/>
+                    <input type="text" class="form-control" id="pupilName" ng-model="newObject.name"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-3" for="pupilBDate">Дата рождения</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="pupilBDate" ng-model="currentPupil.bDate"/>
+                    <input type="text" class="form-control" id="pupilBDate" ng-model="newObject.bDate"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-3" for="pupilAge">Возраст</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="pupilAge" ng-model="currentPupil.age"/>
+                    <input type="text" class="form-control" id="pupilAge" ng-model="newObject.age"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-3" for="pupilGender">Пол</label>
                 <div class="col-sm-9" id="pupilGender" >
-                    <select class="form-control" ng-model="currentPupil.gender">
+                    <select class="form-control" ng-model="newObject.gender">
                         <option value="male">Мальчик</option>
                         <option value="Female">Девочка</option>
                     </select>
@@ -38,7 +38,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-3" for="pupilFamily">Семья</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="pupilFamily" ng-model="currentPupil.family"/>
+                    <input type="text" class="form-control" id="pupilFamily" ng-model="newObject.family"/>
                 </div>
             </div>
         </form>
